tests/toylang/neg/001531_mutation.toylang
program a = { var program a = { } . : bool; } .
